--- a/周波数と脳への影響 - 完全リスト.html
+++ b/周波数と脳への影響 - 完全リスト.html
@@ -3,32 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>周波数と脳への影響 - 完全リスト</title>
+    <title>周波数と脳への影響 - インタラクティブ完全リスト</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             line-height: 1.6;
             color: #333;
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            background-color: #f0f4f8;
         }
         h1 {
             color: #2c3e50;
             text-align: center;
+            margin-bottom: 30px;
         }
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-top: 20px;
+            background-color: white;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         th, td {
             border: 1px solid #ddd;
-            padding: 8px;
+            padding: 12px;
             text-align: left;
         }
         th {
-            background-color: #f2f2f2;
+            background-color: #3498db;
+            color: white;
             font-weight: bold;
         }
         tr:nth-child(even) {
@@ -37,15 +41,37 @@
         a {
             color: #3498db;
             text-decoration: none;
+            transition: color 0.3s;
         }
         a:hover {
-            text-decoration: underline;
+            color: #2980b9;
+        }
+        .selected-row {
+            background-color: #e8f4fd !important;
+            border-left: 5px solid #3498db;
+            font-weight: bold;
+        }
+        #selectedFrequency {
+            background: linear-gradient(45deg, #3498db, #2ecc71);
+            color: white;
+            padding: 15px;
+            border-radius: 8px;
+            text-align: center;
+            font-size: 1.2em;
+            margin-bottom: 20px;
+            opacity: 0;
+            transition: opacity 0.5s ease-in-out;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        #selectedFrequency.visible {
+            opacity: 1;
         }
     </style>
 </head>
 <body>
-    <h1>周波数と脳への影響 - 完全リスト</h1>
-    <table>
+    <h1>周波数と脳への影響 - インタラクティブ完全リスト</h1>
+    <div id="selectedFrequency"></div>
+    <table id="frequencyTable">
         <tr>
             <th>周波数 (Hz)</th>
             <th>脳への効果</th>
@@ -223,15 +249,3 @@
         <tr>
             <td>1700 - 1800</td>
             <td>タイムマネジメントの向上</td>
-            <td>タイムマネジメントコース</td>
-            <td><a href="https://www.youtube.com/results?search_query=1700-1800+Hz+binaural+beats" target="_blank">YouTube で探す</a></td>
-        </tr>
-        <tr>
-            <td>1800 - 1900</td>
-            <td>メンタル持久力の強化</td>
-            <td>持久力トレーニング、メンタルスタミナトレーニング</td>
-            <td><a href="https://www.youtube.com/results?search_query=1800-1900+Hz+binaural+beats" target="_blank">YouTube で探す</a></td>
-        </tr>
-    </table>
-    <p style="text-align: center; margin-top: 20px;">
-        注意: この情報は教育目的のみです。医療アドバイスの代替とはなりません。高周波の音には注意
